// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<a
  className="hotspot-item"
  href="#"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold"
  >
    '3' is a magic number.
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      <bdi>
        com.github.kevinsawicki.http.HttpRequest
      </bdi>
    </div>
  </div>
</a>
`;

exports[`should render correctly 2`] = `
<a
  className="hotspot-item highlight"
  href="#"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold cursor-pointer"
    onClick={[Function]}
    role="button"
  >
    '3' is a magic number.
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      <bdi>
        com.github.kevinsawicki.http.HttpRequest
      </bdi>
    </div>
  </div>
  <LocationsList
    isCrossFile={false}
    locations={Array []}
    onLocationSelect={[Function]}
    scroll={[MockFunction]}
  />
</a>
`;
